[metadata]
name = phaedo
version = attr: phaedo.__version__
url = https://github.com/utamaru-hiro/phaedo
author = hiro utamaru
author_email = lemon.flavor.jam@gmail.com
license_file = LICENSE
description = phaedo: Python domain model library for DDD (Domain Driven Development)
long_description = file: README.md

[options]
packages = find: